Fixed portfoilo indicators on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -79,10 +79,6 @@ body{
 
 
 
-.carousel-indicators {
-	position: relative;
-	top:25px;
-}
 
 .video-container {
 	position: relative;
@@ -213,13 +209,23 @@ and (min-device-width : 600px){
 		font-family: 'Lato', sans-serif;
 		font-size: 1.2em;
 	}
+
+	.carousel-indicators {
+		position: relative;
+		top:25px;
+	}
 } 
 @media only screen 
-and (min-device-width : 320px) 
 and (max-device-width : 600px) {
 	#header{
 		padding-top: 400px; 
 	}
-}
 
+	.carouselFixedHeight{
+		height:350px;
+		min-height:350px
+		max-height:350px;
+	}
+
+}
 
